--- a/u-boot-2016.03/configs/itop4412_defconfig
+++ b/u-boot-2016.03/configs/itop4412_defconfig
@@ -283,7 +283,7 @@ CONFIG_CMD_SETEXPR=y
 #
 # Network commands
 #
-# CONFIG_CMD_NET is not set
+CONFIG_CMD_NET=y
 # CONFIG_CMD_TFTPPUT is not set
 # CONFIG_CMD_TFTPSRV is not set
 # CONFIG_CMD_RARP is not set
@@ -317,7 +317,7 @@ CONFIG_SUPPORT_OF_CONTROL=y
 CONFIG_OF_CONTROL=y
 CONFIG_OF_SEPARATE=y
 # CONFIG_OF_EMBED is not set
-# CONFIG_NET is not set
+CONFIG_NET=y
 
 #
 # Device Drivers
