add sdfuse_q and samsung sign file

--- a/u-boot-2013.01-itop4412/sdfuse_q/Makefile
+++ b/u-boot-2013.01-itop4412/sdfuse_q/Makefile
@@ -37,7 +37,7 @@ dep:
 
 #---------------------------------------------------------------------------------------
 clean:
-		$(RM) -rf chksum
+		$(RM) -rf chksum add_sign add_padding
 
 new:
 		$(MAKE)		clean
